; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ar71xx/files/drivers/spi/extr_spi-vsc7385.c_vsc7385_icpu_reset.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ar71xx/files/drivers/spi/extr_spi-vsc7385.c_vsc7385_icpu_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vsc7385 = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@VSC73XX_BLOCK_SYSTEM = common dso_local global i32 0, align 4
@VSC73XX_ICPU_ADDR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"could not reset microcode, err=%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vsc7385*)* @vsc7385_icpu_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vsc7385_icpu_reset(%struct.vsc7385* %0) #0 {
  %2 = alloca %struct.vsc7385*, align 8
  %3 = alloca i32, align 4
  store %struct.vsc7385* %0, %struct.vsc7385** %2, align 8
  %4 = load %struct.vsc7385*, %struct.vsc7385** %2, align 8
  %5 = load i32, i32* @VSC73XX_BLOCK_SYSTEM, align 4
  %6 = load i32, i32* @VSC73XX_ICPU_ADDR, align 4
  %7 = call i32 @vsc7385_write(%struct.vsc7385* %4, i32 %5, i32 0, i32 %6, i32 0)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %1
  %11 = load %struct.vsc7385*, %struct.vsc7385** %2, align 8
  %12 = getelementptr inbounds %struct.vsc7385, %struct.vsc7385* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @dev_err(i32* %14, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %15)
  br label %17

17:                                               ; preds = %10, %1
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @vsc7385_write(%struct.vsc7385*, i32, i32, i32, i32) #1

declare dso_local i32 @dev_err(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
